# MaxScale

./: build_gateway.inc
query_classifier/: query_classifier.cc  query_classifier.h
query_classifier/test/canonical_tests/: canonizer.c
rabbitmq_consumer/: CMakeLists.txt  Makefile  README  consumer.c  consumer.cnf
server/modules/filter/: Makefile  mqfilter.c
server/modules/routing/readwritesplit/: readwritesplit.c
